--- a/style.css
+++ b/style.css
@@ -112,12 +112,22 @@ h2 {
 }
 
 .program {
+  display: flex;
   background-image: url(images/Fond_Aquarelle.jpg);
   background-position: bottom right;
   background-size: cover;
   height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 img {
   width: 600px;
+}
+
+a:hover {
+  color: rgb(253,246,239);
+  background-color: rgb(29,36,52);
+  padding: 20px 40px;
+  border-radius: 4px;
 }
