--- a/style.css
+++ b/style.css
@@ -125,9 +125,17 @@ img {
   width: 600px;
 }
 
+a {
+  color: white;
+  text-decoration:none;
+  font-size:100px;
+  font-family: AGaramondPro;
+  padding: 10px 20px;
+
+}
+
 a:hover {
-  color: rgb(253,246,239);
-  background-color: rgb(29,36,52);
-  padding: 20px 40px;
-  border-radius: 4px;
+  color: rgb(208, 118, 113);
+  padding: 10px 20px;
+
 }
